force-app/main/default/objects/Speaker_Topic__c/Speaker_Topic__c.object-meta.xml
<CustomObject>
    <label>Speaker Topic</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Speaker Topic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>