force-app/main/default/objects/Speaker_Topic__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Speaker Topics</relationshipLabel>
    <relationshipName>Speaker_Topics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>