force-app/main/default/objects/Speaker_Topic__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <referenceTo>Topic__c</referenceTo>
    <relationshipLabel>Speaker Topics</relationshipLabel>
    <relationshipName>Speaker_Topics</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>